# Python-Scripts

./: .encrypt.sh  .gitignore  README.md  birthdayParadox.ipynb  challengesUrlScraper.py  compitiMate.py  decrypt.sh  fitet-parser.py  fitet-runner.py  flake.nix  index.md  ipOlicyber  matches.json  myers_diff.py  oiiScraper.py  olinfo.py  output..txt  pokedex.csv  pokemon-totalizer.py  pokemon.py  provaIaia.py  pyproject.toml  requirements.txt  rsa.py  scriptInject.py  teoremaMedia.ipynb  tmp.py  tsuky.py
automations/: fancadeLumberjackBot.py  keepScreenOn.py
casual/: CubicEquationSolver.py  birthdayParadox.ipynb  rsa.py  scoutGrouper.py
codeforces/: .envrc
codeforces/itacpc/: calendar.cc  events.cc  main.cc  pizzalandia.cc  tree.cc
fitet/: README.md  __init__.py  __main__.py  caching.py  db.sqlite3  entities.py  fitetparser.py  matches.json  threadutils.py
olicyber/: .envrc
olicyber/acn/: acn.c
olicyber/crypto/: 2f.py  2fpiupiu.py  RompiSchemiAsimmetrici.py  andor.py  berserker.py  rsa.py  (+20 more)
pokemon/: pokedex.csv  pokemon-totalizer.py  pokemon.py
prog/: a.out  a.txt  array.cpp  array2.cpp  b.txt  c.txt  due.cc  dyn.cpp  flake.nix  main.cpp  matrix.cpp  multi.cpp  pila.cpp  recursion.cpp  recursion2.cpp  sort.cpp  stack_and_queue.cpp  stringhe.cpp  struct.cpp  swap.cpp  system_solver.cpp  tree.cpp  utils.cpp  utils.hpp
tpsit/: rcnn.ipynb  resnet.ipynb
univr-scraper/: downloader.html  href.txt  notes.txt  parser.php  proxy.php  redirecter.php  renderer.php  update.php
web_scripts/: cettonator.py  hydraCachixCheck.py  sniffFlags.py  tld_with_www.py  urls
(+178 files in other folders)
